@@ -5,7 +5,7 @@
                 {
                     "caption": "Email address recipient",
                     "name": "fb_email_to",
-                    "description": "Submitted forms will be sent to this address. If this field is empty, the form will be sent to the default email address of the website (which can be found under Extras > Configuration).",
+                    "description": "Submitted forms will be sent to this address. If you leave this field empty, no emails will be sent. This may be what you want when using a custom hook for processing the form.",
                     "category": "Settings - Email",
                     "sortOrder": "1",
                     "type": "email",
@@ -70,7 +70,10 @@
                     "category": "Settings - General",
                     "sortOrder": "92",
                     "type": "text",
-                    "templates": ["fbForm"]
+                    "templates": [
+                        "fbForm",
+                        "fbRegister"
+                    ]
                 },{
                     "caption": "Layout type",
                     "name": "fb_form_layout",
@@ -80,7 +83,10 @@
                     "type": "listbox",
                     "inputOptionValues": "Vertical==vertical||Horizontal==horizontal||Inline==inline",
                     "defaultValue": "horizontal",
-                    "templates": ["fbForm"]
+                    "templates": [
+                        "fbForm",
+                        "fbRegister"
+                    ]
                 },{
                     "caption": "Custom pre-hook(s)",
                     "name": "fb_prehooks",
